# otel-agent-provenance

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  smoke_test.py
docs/: agent-acceptance.md  agent-derivation.md  agent-provenance.md  gap-analysis.md
examples/: adk_grounding.py  autogen_provenance.py  azure_rag_provenance.py  settlement_e2e.py
model/: agent-acceptance.yaml  agent-derivation.yaml  agent-federation.yaml  agent-provenance.yaml
otep/: OTEP-agent-provenance.md
src/otel_agent_provenance/: __init__.py  conventions.py  federation.py  spans.py
src/otel_agent_provenance/adapters/: __init__.py  autogen_derivation.py  azure_rag.py  google_grounding.py  semantic_kernel_rag.py
src/otel_agent_provenance/instruments/: __init__.py  settlement_evidence.py  settlement_exchange.py  settlement_mediator.py  settlement_shim.py
tests/: test_adapters.py  test_conventions.py  test_spans.py
